# EGA-AL-Trail

./: .editorconfig  .env.example  .gitignore  .prettierrc  CLAUDE.md  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_reference_data.py  0003_webhooks.py  0004_revision_history.py  0005_product_configuration.py  0006_passport_drafts.py
apps/api/dpp_api/: __init__.py  logging.py  main.py  observability.py  settings.py
apps/api/dpp_api/auth/: __init__.py  dependencies.py  jwt_verify.py  principal.py
apps/api/dpp_api/db/: __init__.py  models.py  session.py
apps/api/dpp_api/middleware/: __init__.py  rate_limit.py  security_headers.py
apps/api/dpp_api/routers/: __init__.py  admin.py  audit.py  cast_events.py  customer.py  did.py  dpps.py  drafts.py  health.py  monitoring.py  pipeline.py  plant_monitor.py  presets.py  products.py  resolver.py  verifier.py  verifier_registry.py
apps/api/dpp_api/services/: __init__.py  audit.py  audit_query.py  bootstrap.py  bundles.py  cast_events.py  customer_views.py  dpps.py  drafts.py  generator.py  keystore.py  monitoring.py  pipeline.py  pipeline_metrics.py  plant_signals.py  plausibility.py  presets.py  product_seed.py  products.py  qr.py  reference_data.py  rollover.py  schema_validator.py  signer.py  tenants.py  verifier_credentials.py  verifier_registry.py  webhooks.py
apps/api/tests/: conftest.py  test_audit.py  test_audit_query.py  test_bundles.py  test_customer_views.py  test_generator.py  test_http.py  test_pipeline.py  test_plausibility.py  test_rls_isolation.py  test_rollover.py  test_schema_validator.py  test_signer.py  test_verifier_credentials.py  test_webhooks.py
apps/web-console/: Dockerfile  next.config.mjs  package.json  vercel.json
apps/web-console/src/app/: Landing.tsx  globals.css  layout.tsx  page.tsx
apps/web-console/src/app/admin/: page.tsx
apps/web-console/src/app/api/audit/: route.ts
apps/web-console/src/app/api/fire/: route.ts
apps/web-console/src/app/authority/: page.tsx
apps/web-console/src/app/console/: layout.tsx  loading.tsx
apps/web-console/src/app/console/audit/: page.tsx
apps/web-console/src/app/console/batch-import/: page.tsx
apps/web-console/src/app/console/compliance-report/: page.tsx
apps/web-console/src/app/console/create-passport/: actions.ts  page.tsx
apps/web-console/src/app/console/dpps/: page.tsx
apps/web-console/src/app/console/eu-registry/: page.tsx
apps/web-console/src/app/console/integrations/: ConnectDialog.tsx  data.ts  page.tsx
apps/web-console/src/app/console/monitoring/: page.tsx
apps/web-console/src/app/console/my-assignments/: AssignmentSubmitter.tsx  actions.ts  page.tsx
apps/web-console/src/app/console/onboarding/: page.tsx
apps/web-console/src/app/console/overview/: page.tsx
apps/web-console/src/app/console/ownership-transfers/: InitiateTransferDialog.tsx  RowActions.tsx  actions.ts  page.tsx  store.ts
apps/web-console/src/app/console/pipeline/: page.tsx
apps/web-console/src/app/console/plant-monitor/: page.tsx
apps/web-console/src/app/console/settings/: page.tsx
apps/web-console/src/app/console/sources/: page.tsx
apps/web-console/src/app/console/supply-chain/: page.tsx
apps/web-console/src/app/console/team/: InviteMemberDialog.tsx  actions.ts  invite-store.ts  page.tsx
apps/web-console/src/app/console/verifiers/: page.tsx
apps/web-console/src/app/portal/: layout.tsx  page.tsx
apps/web-console/src/app/portal/carbon/: page.tsx
apps/web-console/src/app/portal/cbam/: page.tsx
apps/web-console/src/app/portal/chemistry/: page.tsx
apps/web-console/src/app/portal/compliance/: page.tsx
apps/web-console/src/app/portal/exports/: page.tsx
apps/web-console/src/app/portal/recycled/: page.tsx
apps/web-console/src/app/portal/scorecard/: page.tsx
apps/web-console/src/app/portal/search/: page.tsx
apps/web-console/src/app/portal/webhooks/: page.tsx
apps/web-console/src/app/verifier/: layout.tsx  page.tsx
apps/web-console/src/components/console/: AuditChainVerifier.tsx  FirePresetButton.tsx  LineChart.tsx  Shell.tsx  Sparkline.tsx  StubPage.tsx
apps/web-console/src/components/portal/: ExportTable.tsx  PortalShell.tsx  WebhookManager.tsx
apps/web-console/src/components/verifier/: CredentialActions.tsx  IssueCredentialForm.tsx  VerifierShell.tsx
apps/web-console/src/lib/: admin-api.ts  api-auth.ts  api.ts  auth.ts  customer-api.ts  draft-api.ts  monitoring-api.ts  pipeline-api.ts  plant-monitor-api.ts  product-api.ts  rbac.ts  verifier-api.ts
apps/web-public/: Dockerfile  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/web-public/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web-public/src/components/viewer/: AudienceSwitcher.tsx  Carbon.tsx  Compliance.tsx  Documentation.tsx  ExportToolbar.tsx  FooterSection.tsx  Genealogy.tsx  Hero.tsx  ScrollProgress.tsx  Story.tsx  TopBar.tsx  Verification.tsx
apps/web-public/src/lib/: audience.ts  dpp-client.ts
docs/adr/: 0001-monorepo-pnpm-turborepo.md  0002-schema-as-contract.md  0003-row-level-security-multi-tenancy.md  0004-ed25519-signing.md
infra/docker/: .env.example  docker-compose.yml
infra/docker/postgres/init/: 01-extensions.sql  02-app-role.sql
infra/k8s/: README.md
infra/k8s/base/: ingress.yaml  kustomization.yaml  namespace.yaml
infra/k8s/base/api/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
infra/k8s/base/web-console/: deployment.yaml  hpa.yaml  service.yaml
infra/k8s/base/web-public/: deployment.yaml  hpa.yaml  service.yaml
scripts/: build_cert_pdfs.py
(+25 files in other folders)
