[project]
name = "dpp-api"
version = "0.1.0"
description = "EGA DPP Platform — backend services (ingestion, generator, signer, resolver, audit)."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "DPP Service Provider" }]
readme = "README.md"

dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "redis[hiredis]>=5.2.0",
  "httpx>=0.27.2",
  "structlog>=24.4.0",
  "orjson>=3.10.10",
  "jsonschema>=4.23.0",
  "cryptography>=43.0.3",
  "PyNaCl>=1.5.0",
  "qrcode[pil]>=8.0",
  "python-dateutil>=2.9.0",
  "ulid-py>=1.1.0",
  "boto3>=1.35.50",
  "minio>=7.2.10",
  "tenacity>=9.0.0",
  "PyJWT[crypto]>=2.9.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "sentry-sdk[fastapi]>=2.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.2",
  "ruff>=0.7.4",
  "mypy>=1.13.0",
  "datamodel-code-generator>=0.26.3",
  "ipython>=8.29.0",
]

[project.scripts]
dpp-api = "dpp_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dpp_api"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["dpp_api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "RUF", "ASYNC", "PL"]
ignore = [
  "S101",      # assert is fine in tests / runtime invariants
  "PLR0913",   # too-many-arguments
  "B008",      # FastAPI Depends() / Query() / Body() in defaults is idiomatic
  "PLC0415",   # local imports used to avoid circular import cycles
  "RUF001",    # ambiguous unicode in strings (we use ·, °, etc. legitimately)
  "RUF002",    # ambiguous unicode in docstrings
  "RUF003",    # ambiguous unicode in comments
  "PLW0603",   # global statements for module-level caches
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR2004", "E501"]
"dpp_api/services/product_seed.py" = ["E501"]   # data file: long URL/asset literals
"dpp_api/services/plant_signals.py" = ["E501", "PLR0911", "PLR2004"]  # data catalogue + classifier
"dpp_api/db/models.py" = ["E501"]               # SQLAlchemy CheckConstraint literals
"dpp_api/services/signer.py" = ["E501"]         # canonicalisation comments referencing specs
"dpp_api/services/generator.py" = ["E501"]      # ESPR article references in comments
"dpp_api/services/bundles.py" = ["E501"]
"dpp_api/services/customer_views.py" = ["E501"]
"dpp_api/middleware/security_headers.py" = ["E501"]
"dpp_api/main.py" = ["S104"]                    # uvicorn binds 0.0.0.0 by design
"dpp_api/middleware/rate_limit.py" = ["S105"]   # Lua script literal, not a credential

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

# SQLAlchemy MappedAsDataclass(kw_only=True) is correct at runtime, but mypy
# evaluates dataclass field ordering before honouring kw_only — every
# Mapped[...] without a default after one with a default trips [misc].
[[tool.mypy.overrides]]
module = "dpp_api.db.models"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
